# mvm

./: Cargo.toml  HelloClass.mvm
geometry/shape/: Circle.mvm
mvm/: Cargo.toml
mvm-cli/: Cargo.toml
mvm-cli/src/: main.rs
mvm-gtk/: Cargo.toml
mvm-parse/: Cargo.toml
mvm/src/: error.rs  instruction.rs  instructions.rs  lib.rs  opcode.rs  stack.rs  types.rs  vm.rs
mvm/src/class/: class.rs  code.rs  constant_pool.rs  descriptor.rs  error.rs  field.rs  flags.rs  instance.rs  method.rs  mod.rs  name.rs  object.rs  signature.rs  symbolic.rs
mvm/src/classloader/: classfile.rs  error.rs  parser.rs
mvm/src/exec/: class_loader.rs  error.rs  mod.rs  resolver.rs  runtime.rs  thread.rs
mvm/src/memory/: class_heap.rs  class_loader.rs  error.rs  frame.rs  frame_stack.rs  heap.rs  layout.rs  locals.rs  mod.rs  object_heap.rs  operand_stack.rs
mvm/src/parse/: classfile.rs  error.rs  parser.rs
mvm/src/stack/: error.rs  mod.rs  operand_stack.rs  variables.rs
mvm/src/structs/: name.rs
mvm/src/types/: array_value.rs  boolean.rs  byte.rs  category.rs  char.rs  comp_value.rs  constant.rs  double.rs  error.rs  float.rs  int.rs  jvm_value.rs  long.rs  mod.rs  reference.rs  short.rs  value.rs
src/: main.rs  observe.rs
src/gui/: classes.rs  fields.rs  frame.rs  frame_stack.rs  header.rs  instances.rs  instructions.rs  landing.rs  locals.rs  mod.rs  operand_stack.rs  style.css  vm.rs  window.rs
src/gui/ui/: content.rs  frame_stack.rs  main_window.rs  mod.rs
src/vm/: error.rs  instruction.rs  mod.rs
src/vm/bytecode/: arithmetic.rs  branch.rs  constant.rs  exec.rs  (+8 more)
(+41 files in other folders)
