[package]
name = "mvm"
version = "0.1.0"
authors = ["Miroslav Krýsl <mkrysl@protonmail.com>"]
edition = "2018"

[dependencies]
gtk = { version = "0.9.0", features = ["v3_24"] }
gdk = "0.13.0"
relm = "0.20.0"
relm-derive = "0.20.0"
thiserror = "1.0.20"
regex = "1.3.7"
itertools = "0.9.0"
lazy_static = "1.4.0"
derive_more = "0.99.8"